<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_card"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/card"/>
        <item
                android:id="@+id/nav_event"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/event"/>
        <item
                android:id="@+id/nav_gacha"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/gacha"/>
        <item
                android:id="@+id/nav_score"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/score"/>
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_game"
                android:title="@string/map"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share"/>
            <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/setting"/>
        </menu>
    </item>

</menu>
