<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
            android:fragment="com.ccq.bangdream.setting.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/img_path"
            android:icon="@drawable/ic_download_black_x24"/>

    <header
            android:fragment="com.ccq.bangdream.setting.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/update"
            android:icon="@drawable/ic_sync_black_24dp"/>

    <header
            android:fragment="com.ccq.bangdream.setting.SettingsActivity$GeneralPreferenceFragment"
            android:title="@string/about_us"
            android:icon="@drawable/ic_info_black_24dp"/>

    <header
            android:fragment="com.ccq.bangdream.setting.SettingsActivity$NotificationPreferenceFragment"
            android:title="@string/licence"
            android:icon="@drawable/ic_notifications_black_24dp"/>


    <header
            android:fragment="com.ccq.bangdream.setting.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/donate"
            android:icon="@drawable/ic_heart_black_x24"/>

</preference-headers>
