<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_margin="30dp"
>


    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/img_path"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/update"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/licence"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/donate"/>
    </LinearLayout>


</LinearLayout>