<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="15dp">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_gacha"/>

    <Button
            android:id="@+id/gacha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10hits"/>

    <GridView
            android:id="@+id/card_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="72dp"
            android:stretchMode="spacingWidthUniform"
            android:numColumns="5"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <Button
                android:id="@+id/charts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/charts"
                android:visibility="invisible"/>
        <Button
                android:id="@+id/go_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go_on"
                android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>